# Equities

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  SETUP_GUIDE.md  docker-compose.yml  etf_analysis_plan.md  etf_data_sources_analysis.md  etf_holdings_schema.sql  reset.sh  test_csv.py  test_import.py  test_parse.py  test_regex.py  test_simple_dag.py  tmp_extract_cse_xlsx.py
web/: .dockerignore  Dockerfile  ENTRYPOINT_README.md  entrypoint.py  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements-lock.txt  requirements.txt
web/airflow/: Dockerfile.airflow  README.md  SCRAPER_README.md  requirements-airflow.txt  scraper_no_django.py  scraper_runner.py
web/airflow/dags/: comprehensive_ticker_enrichment_dag.py  cse_handler.py  historical_daily_loader.py  intraday_price_loader.py  scraper_no_django.py  tsx_listing_dag.py  vettafi_index_scraper_dag.py
web/airflow/scripts/: asset_analysis_utils.py.broken  comprehensive_enrichment.py  cse_extractor.py  postgres_utils.py
web/dockerfiles/: Dockerfile.scraper
web/project/: settings.py  urls.py  urls_local.py
web/stocks/: admin.py  api_urls.py  api_views.py  asset_classifier.py  enriched_data_service.py  etf_holdings_utils.py  etf_utils.py  factories.py  historical_data.py  models.py  models_etf.py  pdf_parser.py  portfolio_parser.py  portfolio_utils.py  sector_analysis_utils.py  serializers.py  tests.py  urls.py  utils.py  vettafi_scraper.py  views.py
web/stocks/migrations/: 0001_initial.py  0002_listing.py  0003_listing_status_active.py  0004_migrate_recent_to_listed.py  0012_portfolio.py  (+10 more)
(+57 files in other folders)
