[project]
name = "web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "django>=4.2,<5",
    "django-cors-headers>=4.3",
    "django-prometheus>=0.3",
    "django-redis>=5.4",
    "djangorestframework>=3.15",
    "factory-boy>=3.3",
    "lxml>=6.1.1",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.9",
    "psycopg2-binary>=2.9.12",
    "pytest-django>=4.8",
    "redis>=5.0",
    "requests>=2.34.2",
    "yfinance>=1.4.1",
]
